--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style3.css">
     <!-- remix icons link -->
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css" rel="stylesheet" />
     <title>My Portfolio</title>
@@ -36,7 +36,7 @@
                 <div class="hero-info">
                     <h2>Hello, It's Me</h2>
                     <h1>Shubham Sharma</h1>
-                    <h2>And I'm a <span>Frontend Developer</span></h2>
+                    <h2>And I'm a Frontend Developer</h2>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla quos vel consequatur commodi
                         exercitationem temporibus perferendis</p>
                     <div class="buttons">
@@ -106,7 +106,7 @@
             <div class="col">
                 <h3>02</h3>
                 <h4>Frontend</h4>
-                <p>I encompasses the look and feel of the user interface, ensuring it's both visually appealing and easy
+                <p>I encompasses the look and feel of the user interface, ensuring it's both visually appealing and easy and smooth UI&Ux desgin
                     to use and using git, github, visual studio code, jquery, angular js, react or Vue.js bootstrap.</p>
                 <a href="#" class="s-btnn">Read More <i class="ri-arrow-right-up-line"></i></a>
             </div>
